Correccion de errores ortograficos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="indexStyle.css">
   <script src="https://kit.fontawesome.com/5c97971593.js" crossorigin="anonymous"></script>
-  <title>Cats and Dogs</title>
+  <title>CAT</title>
 </head>
 
 <body id="body">
@@ -48,10 +48,7 @@
         </div>
         <div class="texto-mapa">
           <h1>MAPA</h1>
-          <p>Este es un mapa que demuestra la habilidad de colocar un mapa, algunos se preguntaran ¿porque hay un mapa
-            aqui?, ¿porque dedicar una seccion completa par un mapa? o ¿Que tiene que ver este mapa con gatos?.
-            Tranquilos, todas estas preguntas y mas voy a responder ahora mismo.<br>
-            SI.
+          <p>Este es un mapa que demuestra la habilidad de colocar un mapa, algunos se preguntaran ¿porque hay un mapa aquí?, ¿porque dedicar una sección completa par un mapa?, o ¿Qué tiene que ver este mapa con gatos?. Tranquilos, todas estas preguntas y más voy a responder ahora mismo. <br> SI.
           </p>
         </div>
       </div>
@@ -62,7 +59,7 @@
     <section class="section" id="form-section">
       <div>
         <h1>¿Quieres hablar con nosotros?</h1>
-        <p>Perfecto! Ya sea para dejar una critica o para simplemente hablar con nosotros! (debido a la soledad de la vida moderna). <br> Estamos mas que disponibles!! solo tiene que dejar sus datos y responder unas simples preguntas!</p>
+        <p>¡Perfecto! Ya sea para dejar una crítica o para simplemente hablar con nosotros! (debido a la soledad de la vida moderna). <br> ¡Estamos más que disponibles!!, solo tiene que dejar sus datos y responder unas simples preguntas!</p>
         <button type="button" id="form-button" onclick="toggleForm()"><i class="fa-solid fa-cat fa-2xl"></i>"mew"</button>
       </div>
     </section>
