Correccion de detalles, agregado detalles en el boton del formulario

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
     </section>
 
-<!--Seccion del mapa-->
+    <!--Seccion del mapa-->
 
     <section class="section">
       <div class="map-section">
@@ -48,19 +48,24 @@
         </div>
         <div class="texto-mapa">
           <h1>MAPA</h1>
-          <p>Este es un mapa que demuestra la habilidad de colocar un mapa, algunos se preguntaran ¿porque hay un mapa aquí?, ¿porque dedicar una sección completa par un mapa?, o ¿Qué tiene que ver este mapa con gatos?. Tranquilos, todas estas preguntas y más voy a responder ahora mismo. <br> SI.
+          <p>Este es un mapa que demuestra la habilidad de colocar un mapa, algunos se preguntaran ¿porque hay un mapa
+            aquí?, ¿porque dedicar una sección completa par un mapa?, o ¿Qué tiene que ver este mapa con gatos?.
+            Tranquilos, todas estas preguntas y más voy a responder ahora mismo. <br> SI.
           </p>
         </div>
       </div>
     </section>
 
-<!--Seccion de acceso al formulatio-->
+    <!--Seccion de acceso al formulatio-->
 
     <section class="section" id="form-section">
       <div>
         <h1>¿Quieres hablar con nosotros?</h1>
-        <p>¡Perfecto! Ya sea para dejar una crítica o para simplemente hablar con nosotros! (debido a la soledad de la vida moderna). <br> ¡Estamos más que disponibles!!, solo tiene que dejar sus datos y responder unas simples preguntas!</p>
-        <button type="button" id="form-button" onclick="toggleForm()"><i class="fa-solid fa-cat fa-2xl"></i>"mew"</button>
+        <p>¡Perfecto! Ya sea para dejar una crítica o para simplemente hablar con nosotros! (debido a la soledad de la
+          vida moderna). <br> ¡Estamos más que disponibles!!, solo tiene que dejar sus datos y responder unas simples
+          preguntas!</p>
+        <button type="button" id="form-button" onclick="toggleForm()"><i
+            class="fa-solid fa-cat fa-2xl"></i>"mew"</button>
       </div>
     </section>
 
@@ -181,8 +186,10 @@
             </div>
           </div>
         </div>
+      </form>
     </div>
   </div>
 </body>
 <script src="js/index.js"></script>
+
 </html>
