Test Netfly manejo de form

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <header>Datos totalmente "privados"</header>
 
-      <form action="#">
+      <form name="datos-privados" method="POST" data-netlify="true">
         <div class="form first">
           <div class="details personal">
             <span class="title">Datos parsonales</span>
