--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="body">
   <!-- Div id "base" contiene las cuatro principales secciones de la pagina ubicados en la "capa" o z-index base abajo de todos -->
   <div id="base">
-    <!-- Section id "section-one-background" contiene la primera seccion que se ve al abrir la pagina, esta a su ves contiene el header con botones de navegacion, esta es un contenedor grid-->
+    <!-- Section id "section-one-background" contiene la primera sección que se ve al abrir la pagina, esta a su ves contiene el header con botones de navegación, esta es un contenedor grid-->
     <section class="section" id="inicio">
 
       <header id="header-navigation-bar">
@@ -38,7 +38,7 @@
       </div>
     </section>
 
-    <!--Seccion del mapa-->
+    <!--Sección del mapa-->
 
     <section class="section">
       <div id="map-section">
@@ -57,7 +57,7 @@
       </div>
     </section>
 
-    <!--Seccion de acceso al formulatio-->
+    <!--Sección de acceso al formulario-->
 
     <section class="section" id="form-section">
       <div id="test-target">
@@ -77,7 +77,7 @@
   <!--Navegador lateral izquierdo-->
 
   <nav id="navegador-lateral">
-    <ul id="navedador-lateral-ul">
+    <ul id="navegador-lateral-ul">
       <a href="#inicio" onclick="setCurrentPosition(1)"><li><i class="fa-solid fa-circle"></i></li></a>
       <a href="#map-section" onclick="setCurrentPosition(2)"><li><i class="fa-solid fa-circle"></i></li></a>
       <a href="#form-section" onclick="setCurrentPosition(3)"><li><i class="fa-solid fa-circle"></i></li></a>
@@ -94,7 +94,7 @@
       <form name="datos-privados" method="POST" data-netlify="true">
         <div class="form first">
           <div class="details personal">
-            <span class="title">Datos parsonales</span>
+            <span class="title">Datos personales</span>
 
             <div class="fields">
               <div class="input-field">
@@ -113,7 +113,7 @@
               </div>
 
               <div class="input-field">
-                <label>Numero de telefono</label>
+                <label>Numero de teléfono</label>
                 <input type="number" placeholder="Prometo no llamar" required>
               </div>
 
@@ -129,7 +129,7 @@
               </div>
 
               <div class="input-field">
-                <label>Una breve descripcion de ti mismo</label>
+                <label>Una breve descripción de ti mismo</label>
                 <input type="text" placeholder="Quiero saber de ti" required>
               </div>
             </div>
@@ -145,13 +145,13 @@
                   <option disabled selected>Selecciona correctamente</option>
                   <option>Si</option>
                   <option>No</option>
-                  <option>Depende de si la pregunta se refiere al estado natural de un gato, tecnicamente ...</option>
-                  <!--habia escrito un parrafo completo pero al final creo que esto basta-->
+                  <option>Depende de si la pregunta se refiere al estado natural de un gato, técnicamente ...</option>
+                  <!--había escrito un párrafo completo pero al final creo que esto basta-->
                 </select>
               </div>
 
               <div class="input-field">
-                <label>¿Como llamarias tu idolo gatuno?</label>
+                <label>¿Como llamarías tu ídolo gatuno?</label>
                 <input type="text" placeholder="DiMe tu JeFe SUPREMO" required>
               </div>
 
@@ -161,13 +161,13 @@
               </div>
 
               <div class="input-field">
-                <label>¿Cuantos gatos nesecitas para destruir el mundo?</label>
+                <label>¿Cuantos gatos necesitas para destruir el mundo?</label>
                 <input type="number" placeholder="Ejemplo 666" required>
               </div>
 
               <div class="input-field">
                 <label>¿Cual es tu fecha favorita?</label>
-                <input type="date" placeholder="Culaquier fecha" required>
+                <input type="date" placeholder="Cualquier fecha" required>
               </div>
 
               <div class="input-field">
